ChangeLog of JSch
====================================================================
Last modified: Tue Apr 18 17:32:45 UTC 2006

	
Changes since version 0.1.26:
- bugfix: there was a session crash bug. That occurrence is rare, but 
          depends on the thread scheduling.  FIXED.
- bugfix: problems in generating remote/local absolute paths on sftp.  FIXED.
- bugfix: problems in handling cancel operations for sftp.  FIXED.
- bugfix: ChannelX11s were not terminated for a wrong cookie.  FIXED.
- bugfix: NoSuchAlgorithmException should be thrown if JCE is not 
	  accessible.  FIXED.
- bugfix: ProxyHTTP should check the return code from proxy.  FIXED.
- bugfix: server's version string should be checked carefully.  FIXED.
- feature: some more improvements on sftp uploading.
- feature: 'getUserName' method is added to Session class.

	
Changes since version 0.1.25:		
- bugfix: infinite loop/hang on connection at unexpected error during
          key-exchanging operation.  FIXED
- bugfix: delays on sftp uploading.  FIXED
- bugfix: failed to purge a host-key from its repository in some case. FIXED.
- feature: SOCKS4 proxy

	
Changes since version 0.1.24:		
- bugfix: remote port forwarding is not established. FIXED. 
- bugfix: failed to parse known_hosts file if it has a long public key blob.
 	  FIXED.
- bugfix: sftp put/get operations keep failing.  FIXED.
- bugfix: ChannelShell.setXForwarding always set xforwarding to be true. FIXED.
- change: ChannelShell.setPty is added.
- change: Proxy interface is free from session object.
- change: added examples/ScpToNoneCipher.java to demonstrate NONE Cipher switching.
- feature: added NONE Cipher switching support.
- feature: timeout check will be enabled for proxy connections.

	
Changes since version 0.1.23:		
- bugfix: there was resource leak problems in closing local port forwardings.
  	  FIXED. 
- bugfix: there was a session crash problems in using aes-cbc cipher.  FIXED. 